# NecoKeeper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  QUICK_FIX_404.md  README.md  README_ja.md  alembic.ini  babel.cfg  create_test_data_simple.py  docker-compose.yml  fix_tests.py  import_csv_to_db.py  init_db.py  init_test_data.sql  migration_safety_check.md  mypy.ini  package-lock.json  package.json  pyproject.toml  reproduce_issue.py  reproduce_medical_fail.py  requirements.txt  timezone_fix_proposal.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.kiro/hooks/: HOOKS_GUIDE.md  QUICK_REFERENCE.md  README.md  auto-translate-localization.kiro.hook  pdf_to_image.kiro.hook  pre_commit_quality_gate.kiro.hook  register_care_logs.kiro.hook  register_care_logs_auto.kiro.hook  register_care_logs_manual.kiro.hook  test_coverage_analyzer.kiro.hook
.kiro/settings/: NecoKeeper2.code-workspace  mcp.json
.kiro/steering/: context7-codegen.md  git-workflow.md  necokeeper-mcp.md  product.md  python-backend-best-practices.md  structure.md  tech.md  test-driven-development.md
.kiro_buckup/specs/: TASK_SUMMARY.md
.kiro_buckup/steering/: context7-codegen.md  git-workflow.md  tech.md
alembic/: env.py
alembic/versions/: 06bdb1979ddf_make_weight_optional_in_medical_records.py  10749c886a42_add_log_date_to_care_logs.py  20260120_001_add_location_type.py  20260120_1206_add_coat_color_to_animals.py  20260121_002_migrate_status_to_english.py  20260124_001_make_status_history_new_status_nullable.py  20260125_001_merge_heads.py  20260125_002_remove_pattern_from_animals.py  20260125_003_update_appetite_scale.py  20260208_001_add_care_log_image_fields.py  20260208_002_add_care_log_image_missing_at.py  20260218_001_issue134_adoptions_and_care_logs.py  3014b3fef0cf_remove_sessions_table_for_jwt_auth.py  32ea14574f86_convert_timestamps_to_jst.py  547f91b49336_add_microchip_number_to_animals.py  5b96dc187193_add_unit_column_to_medical_actions.py  5dcf554c0141_make_animal_photo_optional.py  72a47062ea9d_add_rescue_source_and_breed_to_animals.py  8b1e0d7b7b6f_add_defecation_and_stool_condition_to_care_logs.py  8cd9c91fa71c_add_current_location_note_to_animals.py  aff301b23380_merge_animal_heads.py  b91_extend_applicant_model_issue_91.py  ca739447407b_initial_migration.py  f4e98ee7ca5a_replace_animal_age_with_months.py  issue83_medical_info.py
app/: __init__.py  config.py  database.py  main.py
app/auth/: __init__.py  api_key.py  dependencies.py  jwt.py  password.py  permissions.py
app/mcp/: README.md  __init__.py  __main__.py  api_client.py  config.py  error_handler.py  server.py
app/middleware/: __init__.py  auth_redirect.py
app/models/: __init__.py  adoption_consultation.py  adoption_record.py  animal.py  animal_image.py  applicant.py  audit_log.py  care_log.py  medical_action.py  medical_record.py  setting.py  status_history.py  user.py  vaccination_record.py  volunteer.py
app/schemas/: __init__.py  adoption.py  animal.py  animal_image.py  auth.py  care_log.py  medical_action.py  medical_record.py  user.py  vaccination_record.py  volunteer.py
app/services/: __init__.py  adoption_service.py  animal_service.py  care_log_image_service.py  care_log_service.py  csv_service.py  excel_service.py  image_service.py  medical_action_service.py  medical_record_service.py  medical_report_service.py  pdf_service.py  status_history_helper.py  user_service.py  vaccination_service.py  (+1 more)
backups/: necokeeper_backup_20251203_205230.db
data/: necokeeper.db
docs/: admin-cat-detail-redesign-implementation.md  admin-cat-detail-redesign.md  automation-api-guide.md  chrome-devtools-mcp-setup.md  database-reset-guide.md  default-locale-plan.md  hackathon-plan-summary.md  issue-79-summary.md  issue-83-medical-info-spec.md  issue-85-status-location-design.md  issue-87-dashboard-cards-spec.md  issue-88-admin-animals-search-spec.md  mcp-chrome-devtools.md  ocr-import-guide-ja.md  ocr-import-guide.md  public-care-image-upload-spec.md  pycon-mini-shizuoka-2026-slides.marp.md  pycon-mini-shizuoka-2026-talk-draft.md  seo-blocking-guide.md  service-layer-test-coverage-improvement.md  setup-images.md  setup-pwa-icons.md
scripts/: __init__.py  create_placeholder_icons.py  create_test_data.py  demo_data.sql  diagnose_animals.py  init_db.sh  init_test_data.sql  load_sample_animals_from_prod.py  seed_data.py  seed_master_data.py  seed_sample_data.py  setup_kiroween_assets.py  verify_kiroween_setup.py
tests/: __init__.py  conftest.py  test_care_logs_pages.py  test_integration_automation_api.py  test_manifest.py  test_medical_records.py  test_medical_records_pages.py
tmp/: 0_test (3.12).txt
(+311 files in other folders)
